--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-processor-infra",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "bin": {
     "file-processor-infra": "bin/file-processor-infra.js"
   },
@@ -21,6 +21,7 @@
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.470.0",
     "@aws-sdk/client-s3": "^3.468.0",
     "aws-cdk-lib": "2.113.0",
     "constructs": "^10.0.0",
